@@ -226,6 +226,13 @@
 	  socket. [GL #1133]
 	</para>
       </listitem>
+      <listitem>
+	<para>
+	  When a <command>response-policy</command> zone expires, ensure
+	  that its policies are removed from the RPZ summary database.
+	  [GL #1146]
+	</para>
+      </listitem>
     </itemizedlist>
   </section>
 
