@@ -1,3 +1,7 @@
+5283.	[bug]		When a response-policy zone expires, ensure that
+			its policies are removed from the RPZ summary
+			database. [GL #1146]
+
 5282.	[bug]		Fixed a bug in searching for possible wildcard matches
 			for query names in the RPZ summary database. [GL #1146]
 
